Fixed code layout on mobile

--- a/_sass/klise/_syntax.scss
+++ b/_sass/klise/_syntax.scss
@@ -25,6 +25,7 @@ pre.highlight, pre {
   margin: 0 0px;
   @include media-query($on-mobile) {
     margin: 0 calc(51% - 51vw);
+	margin: 0px;
     padding-left: 20px;
   }
   border: 1px solid rgba(128,128,128,0.1);
